--- a/templates/login.html
+++ b/templates/login.html
@@ -1,29 +1,65 @@
 {% extends "base.html" %} {% block title%} login page {% endblock %} {% block
 content%}
-<div class="text-center">
-  <h1>Welcome</h1>
-  <p>Log in to your account to check your previous<br> orders, add or edit your address!</p>
-</div>
-<div class="container mt-5">
-  <form action="/login" method="POST">
-    <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Email address</label>
-      <input
-        type="email"
-        class="form-control"
-        name="email"
-        id="exampleInputEmail1"
-        aria-describedby="emailHelp"
-        placeholder="Enter your email"
-      />
+<div class="container">
+  <div class="card mb-3 text-center">
+    <div class="row g-0">
+      <div class="col-md-4">
+        <img src="static/car1.jpg" class="img-fluid rounded-start" alt="..." />
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h2 class="card-title">Welcome to Tropic Hardware Store</h2>
+          <p class="card-text">
+            Log in to your account to check your previous orders,<br />or create
+            a Tropic account.
+          </p>
+          <!--  -->
+          <div style="width: 25%; margin: 0 auto">
+            <div class="card" style="width: 25rem">
+              <div class="card-body">
+                <form action="/login" method="POST">
+                  <div class="mb-3 d-flex justify-content-center input-group">
+                    <span class="input-group-text" id="basic-addon1"
+                      ><i class="fa-solid fa-envelope"></i
+                    ></span>
+                    <input
+                      type="email"
+                      class="form-control w-75"
+                      name="email"
+                      id="exampleInputEmail1"
+                      aria-describedby="emailHelp"
+                      placeholder="Enter your email"
+                    />
+                  </div>
+                  <div class="mb-3 d-flex justify-content-center input-group">
+                    <span class="input-group-text" id="basic-addon1"
+                      ><i class="fa-solid fa-lock"></i
+                    ></span>
+                    <input
+                      type="password"
+                      name="password"
+                      class="form-control w-50"
+                      id="exampleInputPassword1"
+                      placeholder="Password"
+                    />
+                  </div>
+                  <div class="text-center d-grid">
+                    <button type="submit" class="btn btn-primary">Login</button>
+                  </div>
+                  <br />
+                  <p>
+                    Don't have an account yet?
+                    <a href="/register">Register</a>
+                  </p>
+                </form>
+              </div>
+            </div>
+          </div>
+          <!--  -->
+        </div>
+      </div>
     </div>
-    <div class="mb-3">
-      <label for="exampleInputPassword1" class="form-label">Password</label>
-      <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password" />
-    </div>
-
-    <button type="submit" class="btn btn-primary">Login</button>
-  </form>
+  </div>
 </div>
 
 {% endblock %}
