--- a/templates/products.html
+++ b/templates/products.html
@@ -128,7 +128,11 @@ content%}
 <div class="container mt-5">
   <div class="card border-0">
     <div class="card-header">
-      <h5>Top Selling Items<span class="float-end text-decoration-underline">See All ></span></h5>
+      <h5>
+        Top Selling Items<span class="float-end text-decoration-underline"
+          >See All ></span
+        >
+      </h5>
     </div>
     <div class="card-body">
       <!-- start -->
@@ -263,7 +267,11 @@ content%}
 <div class="container mt-5">
   <div class="card border-0">
     <div class="card-header text-center bg-danger">
-      <h5>Sponsored Products<span class="float-end text-decoration-underline">See All ></span></h5>
+      <h5>
+        Sponsored Products<span class="float-end text-decoration-underline"
+          >See All ></span
+        >
+      </h5>
     </div>
     <div class="card-body">
       <!-- start -->
@@ -391,6 +399,21 @@ content%}
       </div>
       <!-- end -->
     </div>
+  </div>
+</div>
+
+<div class="bg-black text-white p-5 mt-5">
+  <div class="form-floating">
+    <textarea
+      class="form-control"
+      placeholder="Leave a comment here"
+      id="floatingTextarea2"
+      style="height: 100px"
+    ></textarea>
+    <label for="floatingTextarea2">Comments</label>
+  </div>
+  <div class="col-auto mt-3">
+    <button type="submit" class="btn btn-secondary mb-3">Send</button>
   </div>
 </div>
 
