--- a/templates/register.html
+++ b/templates/register.html
@@ -1,35 +1,50 @@
 {% extends "base.html" %} {% block title%} login page {% endblock %} {% block
 content%}
 <div class="text-center">
-  <h1>Welcome</h1>
-  <p>Log in to your account to check your previous<br> orders, add or edit your address!</p>
+  <h1>Welcome to Tropic Hardware Store</h1>
+  <p>
+    Log in to your account to check your previous orders,<br />or create a
+    Tropic account.
+  </p>
 </div>
-<div class="container">
-  <form action="/register" method="POST">
-    <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Full Name</label>
+
+
+
+<!--  -->
+<div class="container" style="width: 25%; margin: 0 auto; ">
+<div class="card" style="width: 25rem;">
+  <div class="card-body">
+    <form action="/register" method="POST">
+    <h1 class=" text-center">Sign up</h1>
+    <div class="mb-3 input-group">
+      <span class="input-group-text" id="basic-addon1">@</span>
       <input
         type="text"
         name="full_name"
         class="form-control"
         id="exampleInputEmail1"
         aria-describedby="emailHelp"
-        placeholder="Enter your full name"
+        placeholder="Username"
+        aria-label="Username"
       />
     </div>
-    <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Email Address</label>
+    <div class="mb-3 input-group">
+      <span class="input-group-text" id="basic-addon1"
+        ><i class="fa-solid fa-envelope"></i
+      ></span>
       <input
         type="email"
         name="email"
         class="form-control"
         id="exampleInputEmail1"
         aria-describedby="emailHelp"
-        placeholder="Enter your email"
+        placeholder="Email"
       />
     </div>
-    <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Phone Number</label>
+    <div class="mb-3 input-group">
+      <span class="input-group-text" id="basic-addon1"
+        ><i class="fa-solid fa-phone"></i
+      ></span>
       <input
         type="tel"
         name="phone_number"
@@ -39,8 +54,10 @@ content%}
         placeholder="Phone number"
       />
     </div>
-    <div class="mb-3">
-      <label for="exampleInputPassword1" class="form-label">Password</label>
+    <div class="mb-3 input-group">
+      <span class="input-group-text" id="basic-addon1"
+        ><i class="fa-solid fa-lock"></i
+      ></span>
       <input
         type="password"
         name="password"
@@ -49,8 +66,37 @@ content%}
         placeholder="Password"
       />
     </div>
-
-    <button type="submit" class="btn btn-primary">Create Account</button>
+    <div class="form-check">
+      <input
+        class="form-check-input is-invalid"
+        type="checkbox"
+        value=""
+        id="invalidCheck3"
+        aria-describedby="invalidCheck3Feedback"
+        required
+      />
+      <label class="form-check-label" for="invalidCheck3">
+        Agree to terms and conditions
+      </label>
+      <div id="invalidCheck3Feedback" class="invalid-feedback">
+        You must agree before submitting.
+      </div>
+    </div>
+    <br />
+    <div class="text-center d-grid">
+      <button type="submit" class="btn btn-primary">Sign Up</button><br /><br />
+    </div>
+    <p>
+      Already have an account?
+      <a href="/logout">Login</a>
+    </p>
   </form>
+  </div>
 </div>
+</div>
+<!--  -->
+
+
+
+
 {% endblock %}
